<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/closeIcon"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_gravity="center|start|top"
        android:layout_marginTop="10dp"
        android:src="@mipmap/closeicon" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <Spinner
            android:id="@+id/ratingsSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/writeReviewlabel"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold">

        </TextView>

        <EditText
            android:id="@+id/reviewMessage"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:autofillHints="@string/writeReviewText"
            android:background="@drawable/rectangle"
            android:gravity="center|start|top"
            android:hint="@string/writeReviewText"
            android:inputType="text"
            android:padding="10dp" />

        <Button
            android:id="@+id/submitReview"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/submit" />
    </LinearLayout>
</FrameLayout>